argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol:  "HTTPS"
spec:
  rules:
  - host: argocd.kube.gitma.de
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 8080
        path: "/"
        pathType: Prefix
  tls:
    - hosts:
      - argocd.kube.gitma.de
